--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -6,11 +6,11 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post" style="max-width:600px;" th:object="${category}">
+<form method="post" style="..." th:object="${category}">
     <div class="form-group">
         <label th:for="name">Name</label>
         <input class="form-control" th:field="*{name}" />
-        <span th:errors="*{name}" class="error"></span>
+        <span th:errors="*{name}" class="error" style="color:red; font-style:italic"></span>
     </div>
 
     <input type="submit" value="Add Category" />
