--- a/src/main/resources/templates/menu/add.html
+++ b/src/main/resources/templates/menu/add.html
@@ -6,12 +6,13 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post" action="/menu/add" th:object="${menu}">
+<form method="post" style="..." th:object="${menu}">
     <div class="form-group">
-        <label th:for="*{name}">Menu</label>
-        <input class="form-control" th:field="*{name}">
-        <span th:errors="*{name}" class="error"></span>
+        <label th:for="name">Name</label>
+        <input class="form-control" th:field="*{name}" />
+        <span th:errors="*{name}" class="error" style="color:red; font-style:italic"></span>
     </div>
+    <input type="submit" value="Create Menu" />
 </form>
 
 </body>
