--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -7,12 +7,12 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 <ul>
-    <li th:each="menu : ${menus}">
-    <a th:href="'/menu/view/' + ${menu.id}" th:text="${menu.name}"></a>
-    </li>
+    <li th:each="cheese : ${cheeses}" th:text="${cheese.name}"></li>
 </ul>
 
-<a href="/menu/add">Add menu</a>
+<p th:unless="${cheeses.size()}"><i>No cheeses yet</i></p>
+
+<p><a th:href="'/menu/add-item/' + ${menuId}">Add Cheese</a></p>
 
 </body>
 </html>
