--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -4,7 +4,7 @@
 
 <body class="container">
 
-<h1 th:text="${title}">Default Title</h1>
+<h1 style="font-weight: bold" th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
 
@@ -26,6 +26,9 @@
     </tr>
 
 </table>
+
+<a href="/cheese/add">Add</a> |
+<a href="/cheese/remove">Remove</a>
 
 </body>
 </html>
