--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -7,10 +7,10 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 <ul>
-    <li th:each="cheese : ${cheeses}" th:text="${cheese.name}"></li>
+    <li th:each="cheese : ${menu.cheeses}" th:text="${cheese.name}"></li>
 </ul>
 
-<p th:unless="${cheeses.size()}"><i>No cheeses yet</i></p>
+<p th:unless="${menu.cheeses.size()}"><i>No cheeses yet</i></p>
 
 <p><a th:href="'/menu/add-item/' + ${menuId}">Add Cheese</a></p>
 
